RESOLVED FIXED 197746
[iOS] Lazily request keyboard on first hardware keydown when a non-editable element is focused
https://bugs.webkit.org/show_bug.cgi?id=197746
Summary [iOS] Lazily request keyboard on first hardware keydown when a non-editable e...
Daniel Bates
Reported 2019-05-09 11:27:24 PDT
In bug #197745 we made keyboard instantiation lazy: we always create one if a hardware keyboard is attached OR a content editable element is focused. We can be even lazier! Specifically the first disjunct can be even lazier. So, I think we only need to create a keyboard if any of the following are satisfied: a. a non-editable element is focused AND we receive *one* hardware keydown event. ii. Take care to reset this on hardware keyboard availability changes. Side note, we could even reduce memory footprint here by tearing down the keyboard here when switching from attached to detached ONLY in the non-editable element case. b. an editable element is focused (obvious, right?)
Attachments
Patch (3.89 KB, patch)
2019-05-09 12:26 PDT, Daniel Bates
no flags
Patch (4.07 KB, patch)
2019-05-09 12:32 PDT, Daniel Bates
no flags
To Land (4.11 KB, patch)
2019-05-09 13:18 PDT, Daniel Bates
no flags
Radar WebKit Bug Importer
Comment 1 2019-05-09 11:42:50 PDT
Daniel Bates
Comment 2 2019-05-09 12:26:39 PDT
Daniel Bates
Comment 3 2019-05-09 12:27:30 PDT
Comment on attachment 369511 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=369511&action=review > Source/WebKit/ChangeLog:10 > + Be even lazier. We only need to create a keyboard if an editable element is focused or on > + the first hardware keydown when a non-editable element is focused. Note that we already do the former. This patch is about the latter.
Daniel Bates
Comment 4 2019-05-09 12:32:34 PDT
EWS Watchlist
Comment 5 2019-05-09 12:33:42 PDT
Attachment 369512 [details] did not pass style-queue: ERROR: Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:1673: Line contains only semicolon. If this should be an empty statement, use { } instead. [whitespace/semicolon] [5] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Brent Fulgham
Comment 6 2019-05-09 12:38:32 PDT
Comment on attachment 369512 [details] Patch r=me
Daniel Bates
Comment 7 2019-05-09 13:18:06 PDT
Daniel Bates
Comment 8 2019-05-09 13:18:48 PDT
Comment on attachment 369519 [details] To Land Clearing flags on attachment: 369519 Committed r245154: <https://trac.webkit.org/changeset/245154>
Daniel Bates
Comment 9 2019-05-09 13:18:49 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.